--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
+    
 <script src="./p5.play.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAJBADKX4kKyBR8ha__GtzhfwMDQbyzDOk",
+    authDomain: "ball-project-1-6df3a.firebaseapp.com",
+    projectId: "ball-project-1-6df3a",
+    storageBucket: "ball-project-1-6df3a.appspot.com",
+    messagingSenderId: "133946025963",
+    appId: "1:133946025963:web:8a07573f1d40358c5fdbae"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
